Cleaned up code. moved global css into main css. Fixed overflow-y for contents

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+body {
+    height: 500px;
+    width: 600px;
+}
+
 .main {
     height: 100%;
     width: 100%;
@@ -53,7 +58,7 @@
 }
 
 .overflow-item {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
